@@ -16,6 +16,16 @@
 
 # CHANGELOG
 
+
+## v0.*.*
+
+### Enhancements
+
+ - Fractions
+  - power/3 now handles coercion values for string, int, and float
+  - fixed reducable values not having proper fractional results (previously returned :no_fractional_power)
+  
+
 ## v0.11.2
 
 ### Build/Development changes
